feat: assistants management page and create assistant

--- a/src/leapfrogai_ui/src/styles/main.scss
+++ b/src/leapfrogai_ui/src/styles/main.scss
@@ -2,6 +2,7 @@
   --header-height: 3rem;
   --footer-height: 1.5rem;
   --message-input-height: 2.5rem;
+  scrollbar-color: themes.$layer-03 themes.$background;
 }
 
 .centered-flexbox {
