--- a/src/leapfrogai_ui/src/styles/main.scss
+++ b/src/leapfrogai_ui/src/styles/main.scss
@@ -1,10 +1,23 @@
 :root {
   --header-height: 3rem;
+  --footer-height: 1.5rem;
   --message-input-height: 2.5rem;
+  scrollbar-color: themes.$layer-03 themes.$background;
 }
 
 .centered-flexbox {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.remove-btn-style {
+  // remove default button styling
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
