--- a/src/leapfrogai_ui/src/styles/main.scss
+++ b/src/leapfrogai_ui/src/styles/main.scss
@@ -30,3 +30,14 @@
   border: none;
   background: themes.$border-subtle-00;
 }
+
+.lf-content-container {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.slot-wrapper {
+  height: 100%;
+}
