--- a/src/leapfrogai_ui/src/styles/main.scss
+++ b/src/leapfrogai_ui/src/styles/main.scss
@@ -41,3 +41,12 @@
 .slot-wrapper {
   height: 100%;
 }
+
+.highlight-icon :global(svg) {
+  cursor: pointer;
+  fill: themes.$icon-secondary;
+  transition: fill 70ms ease;
+  &:hover {
+    fill: themes.$icon-primary;
+  }
+}
