--- a/src/leapfrogai_ui/src/styles/main.scss
+++ b/src/leapfrogai_ui/src/styles/main.scss
@@ -30,3 +30,23 @@
   border: none;
   background: themes.$border-subtle-00;
 }
+
+.lf-content-container {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.slot-wrapper {
+  height: 100%;
+}
+
+.highlight-icon :global(svg) {
+  cursor: pointer;
+  fill: themes.$icon-secondary;
+  transition: fill 70ms ease;
+  &:hover {
+    fill: themes.$icon-primary;
+  }
+}
