--- a/src/leapfrogai_ui/src/app.css
+++ b/src/leapfrogai_ui/src/app.css
@@ -42,4 +42,15 @@
     cursor: pointer;
     outline: inherit;
   }
+
+  .link {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+    letter-spacing: 0.16px;
+    text-decoration: none;
+    color: #78a9ff;
+    cursor: pointer;
+  }
+
 }
