--- a/src/leapfrogai_ui/src/app.css
+++ b/src/leapfrogai_ui/src/app.css
@@ -5,11 +5,14 @@
 :root {
   --header-height: 3rem;
   --message-input-height: 2.5rem;
+  --background-color: #111827;
 }
 
 /*TODO - can we get rid of some of these?*/
 @layer utilities {
-
+  .full-height-minus-header {
+    height: calc(100vh - var(--header-height));
+  }
   .sidebar {
     display: flex;
     height: calc(100vh - var(--header-height));
@@ -17,8 +20,11 @@
   .content {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
+    height:100%;
+    max-height: 100%;
+    overflow: auto;
     padding: 2rem;
+    background: var(--background-color);
   }
 
   .no-scrollbar {
