--- a/src/leapfrogai_ui/src/app.css
+++ b/src/leapfrogai_ui/src/app.css
@@ -5,7 +5,6 @@
 :root {
   --header-height: 3rem;
   --message-input-height: 2.5rem;
-  --background-color: #111827;
   scrollbar-color: #4b5563 #1f2937;
 }
 
@@ -20,12 +19,10 @@
   }
   .content {
     display: flex;
+    flex-grow: 1;
     flex-direction: column;
-    height: 100vh;
-    max-height: 100%;
     overflow: auto;
     padding: 2rem;
-    background: var(--background-color);
   }
 
   .no-scrollbar {
