--- a/src/leapfrogai_ui/src/app.css
+++ b/src/leapfrogai_ui/src/app.css
@@ -2,8 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --header-height: 3rem;
+  --message-input-height: 2.5rem;
+}
+
+/*TODO - can we get rid of some of these?*/
 @layer utilities {
+  .lf-content {
+    display: flex;
+    flex-grow: 1;
+    padding: 2rem;
+  }
   .no-scrollbar {
     scrollbar-width: none;
+  }
+
+  .hide {
+    opacity: 0;
+    transition: opacity 0.2s;
+  }
+
+  .lf-content-container {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .centered-flexbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .remove-btn-style {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+  }
+
+  .link {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+    letter-spacing: 0.16px;
+    text-decoration: none;
+    color: #78a9ff;
+    cursor: pointer;
+  }
+}
+
+@layer components {
+  .chat-icon {
+    width: 32px;
+    height: 52px;
+    padding: 14px 0.25rem;
+    color: white;
   }
 }
