--- a/src/leapfrogai_ui/src/app.css
+++ b/src/leapfrogai_ui/src/app.css
@@ -15,7 +15,7 @@
     flex-grow: 1;
     flex-direction: column;
     overflow: auto;
-    padding: 2rem;
+    padding-top: 2rem;
   }
 
   .no-scrollbar {
