fix screen height bug

--- a/src/leapfrogai_ui/src/app.css
+++ b/src/leapfrogai_ui/src/app.css
@@ -16,6 +16,7 @@
     flex-direction: column;
     overflow: auto;
     padding-top: 2rem;
+    height: calc(100vh - var(--header-height));
   }
 
   .sidebar-height {
