--- a/src/leapfrogai_ui/src/app.css
+++ b/src/leapfrogai_ui/src/app.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-grow: 1;
     flex-direction: column;
+    max-width: calc(100% - 255px);
     overflow: auto;
     padding-top: 2rem;
     height: calc(100vh - var(--header-height));
