--- a/src/leapfrogai_ui/src/app.css
+++ b/src/leapfrogai_ui/src/app.css
@@ -5,6 +5,7 @@
 :root {
   --header-height: 3rem;
   --message-input-height: 2.5rem;
+  --sidebar-width: 255px;
   scrollbar-color: #4b5563 #1f2937;
 }
 
@@ -14,7 +15,6 @@
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    max-width: calc(100% - 255px);
     overflow: auto;
     padding-top: 2rem;
     height: calc(100vh - var(--header-height));
