--- a/src/leapfrogai_ui/src/app.css
+++ b/src/leapfrogai_ui/src/app.css
@@ -24,6 +24,10 @@
     height: calc(100vh - var(--header-height));
   }
 
+  .max-height-sidebar-height {
+    max-height: calc(100vh - var(--header-height));
+  }
+
   .no-scrollbar {
     scrollbar-width: none;
   }
@@ -69,6 +73,7 @@
   .z-max {
     z-index: 9999;
   }
+
 }
 
 @layer components {
