--- a/src/leapfrogai_ui/src/app.css
+++ b/src/leapfrogai_ui/src/app.css
@@ -74,6 +74,14 @@
     z-index: 9999;
   }
 
+   /*Note - tailwind has a truncate class that sets these properties, but for an unknown reason, it was
+   not working.
+   */
+  .truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
 
 @layer components {
