--- a/src/leapfrogai_ui/src/app.css
+++ b/src/leapfrogai_ui/src/app.css
@@ -24,6 +24,10 @@
     height: calc(100vh - var(--header-height));
   }
 
+  .max-height-sidebar-height {
+    max-height: calc(100vh - var(--header-height));
+  }
+
   .no-scrollbar {
     scrollbar-width: none;
   }
@@ -68,6 +72,19 @@
 
   .z-max {
     z-index: 9999;
+  }
+
+  .z-max-1 {
+    z-index: 9000;
+  }
+
+  /*Note - tailwind has a truncate class that sets these properties, but for an unknown reason, it was
+   not working.
+   */
+  .truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
 
